...
    <Animated.View testID={testID} style={viewStyle}>
      <TouchableOpacity
        style={styles.hamburger}
        // @ts-ignore Only used in a drawer
        onPress={navigation.toggleDrawer}
        hitSlop={iconHitslop}
        testID={'Hamburguer'}
      >
        <Hamburger />
      </TouchableOpacity>
      {middleElement}
      {rightElement && <View style={styles.rightElement}>{rightElement}</View>}
    </Animated.View>
...
