...
  return (
    <SafeAreaView style={styles.container}>
      <ScrollView contentContainerStyle={styles.content}>
        <Logo height={32} />
        <Text style={styles.title}>{t('backupSetupTitle')}</Text>
        <Text style={styles.body}>{t('backupSetupBody')}</Text>
        <Button text={t('introPrimaryAction')} onPress={startBackup} testID="SetUpAccountKey" />
      </ScrollView>
    </SafeAreaView>
  )
}

BackupForceScreen.navOptions = {
...
