...
            </Touchable>
          )}
        </View>
        {mode === BackupPhraseContainerMode.READONLY && (
          <View style={styles.phraseContainer}>
            {!!words && (
              <Text style={styles.phraseText} testID="AccountKeyWords">
                {words}
              </Text>
            )}
          </View>
        )}
        {mode === BackupPhraseContainerMode.INPUT && (
...
