...
        }
      />
      <Animated.ScrollView
        scrollEventThrottle={16}
        onScroll={onScroll}
        // style={styles.background}
        testID="ExchangeScrollView"
        stickyHeaderIndices={[]}
        contentContainerStyle={styles.contentContainer}
      >
        <SafeAreaView style={styles.background} edges={['bottom']}>
          <DisconnectBanner />
          <View style={styles.goldPrice}>
...
          <CeloGoldOverview testID="ExchangeAccountOverview" />
          <ItemSeparator />
          {!RESTRICTED_CP_DOTO && (
            <SettingsItemTextValue
              title={t('withdrawCelo')}
              onPress={goToWithdrawCelo}
              testID={'WithdrawCELO'}
              showChevron={true}
            />
          )}
          <SectionHead text={t('global:activity')} />
          <TransactionsList currency={CURRENCY_ENUM.GOLD} />
        </SafeAreaView>
...
