...
              autoCapitalize="words"
              onChangeText={this.onChangeExchangeAmount}
              value={this.getInputValue()}
              placeholderTextColor={colors.gray3}
              placeholder={'0'}
              style={styles.currencyInput}
              testID="ExchangeInput"
            />
          </View>
          <LineItemRow
            textStyle={styles.subtotalBodyText}
            title={
              <Trans
...
          text={t(`global:review`)}
          accessibilityLabel={t('continue')}
          disabled={this.isExchangeInvalid()}
          type={BtnTypes.SECONDARY}
          size={BtnSizes.FULL}
          style={styles.reviewBtn}
          testID="ExchangeReviewButton"
        />
        <Dialog
          title={t('rateInfoTitle')}
          isVisible={exchangeRateInfoDialogVisible}
          actionText={t('global:dismiss')}
          actionPress={this.toggleExchangeRateInfoDialog}
...
