...
      placeholder={'0'}
      placeholderTextColor={colors.gray3}
      keyboardType={'decimal-pad'}
      autoCapitalize="words"
      onChangeText={onCeloChanged}
      value={celo}
      testID={'CeloAmount'}
    >
      {feeEstimate ? (
        <TouchableOpacity testID={'MaxAmount'} onPress={setMaxAmount}>
          <Text style={[styles.maxAmount, { color }]}>{t('maxSymbol')}</Text>
        </TouchableOpacity>
      ) : (
...
