...
  }

  render() {
    const { recipient, t } = this.props

    return (
      <Touchable onPress={this.onPress} testID="RecipientItem">
        <View style={styles.row}>
          <ContactCircle style={styles.avatar} recipient={recipient} />
          <View style={styles.contentContainer}>
            <Text numberOfLines={1} ellipsizeMode={'tail'} style={styles.name}>
              {getDisplayName(recipient, t)}
            </Text>
...
