...
  "exchangeRateInfo": "Trades are floating estimates",
  "rateInfoTitle": "Floating change rate",
  "rateInfoBody": "Your amount could change depending on the market conditions. Your final amount will be no more than 1% deviated from the estimate.",
  "accountAddressLabel": "Account No. or Address",
  "celoAmountLabel": "Amount (CELO)",
  "maxSymbol": "Max",
  "withdrawCeloReview": "Review",
  "withdrawCeloTo": "Withdraw to",
  "withdrawCeloAmount": "Amount (CELO)",
  "withdrawScanQrTitle": "Scan"
}

