...
  render() {
    const { t } = this.props

    return (
      <SafeAreaView style={styles.container}>
        <DevSkipButton nextScreen={Screens.PincodeEducation} />
        <ScrollView contentContainerStyle={styles.scrollContainer} testID="scrollView">
          <View style={styles.terms}>
            <Text style={fontStyles.h1} testID="Terms">
              {t('terms.title')}
            </Text>
            <Text style={styles.header}>{t('terms.heading1')}</Text>
            <Text style={styles.disclaimer}>
...
        </ScrollView>
        <Button
          standard={false}
          type={BtnTypes.PRIMARY}
          text={t('global:accept')}
          onPress={this.onPressAccept}
          testID={'AcceptTermsButton'}
        />
      </SafeAreaView>
    )
  }
}

...
