...
          <FormInput
            label={t('fullName')}
            onChangeText={this.onChangeNameInput}
            value={name}
            enablesReturnKeyAutomatically={true}
            placeholder={t('fullNamePlaceholder')}
            testID={'NameEntry'}
          />
          <PhoneNumberInput
            label={t('phoneNumber')}
            style={styles.phoneNumberInput}
            country={country}
            internationalPhoneNumber={internationalPhoneNumber}
...
          <Button
            onPress={this.onPressContinue}
            text={t('global:next')}
            size={BtnSizes.MEDIUM}
            type={BtnTypes.ONBOARDING}
            disabled={!this.state.isValidNumber}
            testID={'NameAndNumberContinueButton'}
          />
        </ScrollView>
        <KeyboardSpacer />
      </SafeAreaView>
    )
  }
...
