...
        <Button
          onPress={onPressCreateAccount}
          text={t('welcome.createAccount')}
          size={BtnSizes.FULL}
          type={BtnTypes.ONBOARDING}
          style={styles.createAccountButton}
          testID={'CreateAccountButton'}
        />
        <Button
          onPress={onPressRestoreAccount}
          text={t('welcome.restoreAccount')}
          size={BtnSizes.FULL}
          type={BtnTypes.ONBOARDING_SECONDARY}
...
